--- a/ShockQuiz/App.config
+++ b/ShockQuiz/App.config
@@ -1,26 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-        <section name="entityFramework"
-          type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-          requirePermission="false"/>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="ShockQuiz.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings"
+      type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="ShockQuiz.Properties.Settings"
+        type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
-    </configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework"
+      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+      requirePermission="false"/>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
-    <entityFramework>
-        <providers>
-            <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
-        </providers>
-      <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      </defaultConnectionFactory>
-    </entityFramework>
+  <entityFramework>
+    <providers>
+      <!--<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>-->
+      <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact"/>
+          </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="System.Data.SqlServerCe.4.0"/>
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
   <connectionStrings>
-    <add name="ShockQuiz" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ShockQuiz;Integrated Security=True;MultipleActiveResultSets=True;"
-      providerName="System.Data.SqlClient" />
+    <!--<add name="ShockQuiz" connectionString="Server=sql10.freemysqlhosting.net;Database=sql10314702;Uid=sql10314702;Pwd=IQ1eEYWcRh;Persist Security Info=True" providerName="MySql.Data.MySqlClient" />-->
+    <!-- <add name="ShockQuiz" connectionString="Server=localhost;Database=shockquiz;Uid=sant11h;Pwd=sundownss;Persist Security Info=True" providerName="MySql.Data.MySqlClient" />-->
+    <!--<add name="ShockQuiz" connectionString="Server=108.160.150.200;Port=3306;Database=nssistemas_santi;Uid=nssistemas_santi;Pwd=6IgvMmZBr;SSLmode=none" providerName="MySql.Data.MySqlClient" />-->
+    <add name="ShockQuiz"
+      connectionString="Data Source=ShockQuiz.sdf;Password=sundownss"
+      providerName="System.Data.SqlServerCe.4.0"/>
   </connectionStrings>
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SqlServerCe.4.0"/>
+      <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0"
+          description=".NET Framework Data Provider for Microsoft SQL Server Compact"
+          type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
+    </DbProviderFactories>
+  </system.data></configuration>
