--- a/ShockQuiz/ShockQuiz.csproj
+++ b/ShockQuiz/ShockQuiz.csproj
@@ -176,14 +176,15 @@
     </Compile>
     <Compile Include="Helpers\ProgressReportModel.cs" />
     <Compile Include="IO\LoginDTO.cs" />
+    <Compile Include="IO\NombresDatos.cs" />
     <Compile Include="IO\PreguntaDTO.cs" />
     <Compile Include="IO\RespuestaDTO.cs" />
     <Compile Include="IO\ResultadoRespuesta.cs" />
     <Compile Include="Dominio\Pregunta.cs" />
     <Compile Include="Logger.cs" />
-    <Compile Include="Migrations\202011241913037_init.cs" />
-    <Compile Include="Migrations\202011241913037_init.designer.cs">
-      <DependentUpon>202011241913037_init.cs</DependentUpon>
+    <Compile Include="Migrations\202012301641161_init.cs" />
+    <Compile Include="Migrations\202012301641161_init.designer.cs">
+      <DependentUpon>202012301641161_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
@@ -209,8 +210,8 @@
     <EmbeddedResource Include="Forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202011241913037_init.resx">
-      <DependentUpon>202011241913037_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202012301641161_init.resx">
+      <DependentUpon>202012301641161_init.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
